agregar talle ->terminado

--- a/views/create.erb
+++ b/views/create.erb
@@ -4,7 +4,7 @@
 <form method="post" action="/create">
     <fieldset>
         <label for="name"> Nombre: </label> <br>
-        <input type="text" name="nombre" id="name" placeholder="Nombre">
+        <input type="text" name="name" id="name" placeholder="Nombre">
     </fieldset>
 
     <fieldset>
